create interactive grid

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Physics App</title>
+    <title>Navier-Stokes Equation</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
+        onload="renderMathInElement(document.body);"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div id="content">
+        <h1>Interactive Cartesian Grid</h1>
+        <div id="controls">
+            <p id="circle-location">Circle Location: (0, 0)</p>
+            <button id="reset-btn">Reset Circle</button>
+        </div>
+        <svg id="grid" width="600" height="600"></svg>
+    </div>
 </body>
 </html>
+
