update button text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
             <!-- Reset and Toggle -->
             <div id="controls">
-                <button id="reset-btn">Reset</button>
+                <button id="reset-btn">Randomize</button>
                 <label>
                     <input type="checkbox" id="show-vectors" />
                     Show Vectors
